Fix title and close button alignment

--- a/demos/PersonalizerBusinessDemo/PersonalizerBusinessDemo/wwwroot/css/site.css
+++ b/demos/PersonalizerBusinessDemo/PersonalizerBusinessDemo/wwwroot/css/site.css
@@ -455,3 +455,7 @@ h1 {
         max-width: 30%;
     }
 }
+
+.modal-header .close {
+    font-size: 1.25rem;
+}
